--- a/lifer-profiles.html
+++ b/lifer-profiles.html
@@ -52,7 +52,7 @@
 
 
     <!-- our CSS  -->
-    <link rel="stylesheet" href="css/common4.css">
+    <link rel="stylesheet" href="css/meet-lifers.css">
 
     <!-- Required for sidescroll -->
     <link rel="stylesheet" href="css/scroll-style.css">
