--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <div id="tophat">
       <div class="row">
         <div class="col one">
-          <a href=""><i class="fa fa-home" style="color: white; font-size: 1.2em;"></i>&nbsp SERIES | UNEQUAL JUSTICE</a>
+          <a href="index.html"><i class="fa fa-home" style="color: white; font-size: 1.2em;"></i>&nbsp SERIES | UNEQUAL JUSTICE</a>
       </div>
 
       <div class="col">
@@ -106,7 +106,7 @@
     <div class="centered">
       <p class="line-1 anim-typewriter">Growing Up Behind Bars</p>
 
-      <div id="test"><hr>The United States is the only country in the world that condemns people to life in prison for crimes committed under the age of 18. Yet in the “lock ‘em up” climate of the 1990s, thousands of juveniles were given life sentences without parole.</div>
+      <div id="test"><hr>The United States is the only country to condemn people to life in prison for crimes committed as minors. In recent years the Supreme Court has ruled this unconstitutional. Yet more than 2000 so-called juvenile lifers remain in prison in what the court says is cruel and unusual punishment.</div>
 
     </div>
 
@@ -132,7 +132,8 @@
       <!-- <hr style="border: 1px solid #CAEBF2; width:20%;"> -->
 
     <!-- <h1 style="padding-bottom:1em;">"I made a mistake"</h1>-->
-    <p class="opening-text">The U.S. Supreme Court has since ruled this unconstitutional. It is estimated more than 2,000 are imprisoned in what the Court says is cruel and unusual punishment. The state of Maryland alone has 312 such juveniles. Almost twenty-five years passed without a singe parole. </p><br>
+    <p class="opening-text">Maryland is one of only three states that gives its governor a say in granting parole. In the 1990s, fear over the rise in violent crime led the governor to declare he would sign no paroles for individuals with life sentences, including those who had committed crimes before turning 18.<br><br>
+      The Supreme Court has ruled that juveniles must be given a chance for release. Yet some 300 such Maryland inmates have gone twenty-three years with no parole. That is now being challenged in court in a suit against Governor Larry Hogan.</p><br>
 
     <hr style="width:20%; border:1px solid white;">
 
@@ -143,31 +144,31 @@
       <div class="embed-responsive embed-responsive-16by9">
         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/M2GgIXkvFeE"></iframe>
       </div>
-      <p class="video-caption">Video courtesy PBS NewsHour, produced by John Yang of PBS NewsHour and Emily Top, Camila Velloso, Hannah Gaskill, Athiyah Azeem, Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi and DeLon Thornton of Capital News Service.</p>
+      <p class="video-caption">Video courtesy PBS NewsHour</p>
     </div><br>
 
 <hr style="width:20%; border:1px solid white;">
       <br>
     <div class="row">
       <div class="col-lg-3 col-md-12 col-sm-12">
-        <a href="#"><img src="images/gavel.jpg" alt="..." style="float:left;"></a>
+        <a href="glendening.html"><img src="images/gavel.jpg" alt="..." style="float:left;"></a>
       </div>
       <div class="col-lg-9 col-md-12 col-sm-12">
         <h3>October 16, 2019</h3>
-        <a href="story-template1.html" style="color: white;"><h4>The Glendening Legacy</h4></a>
-        <p class="description-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        <a href="glendening.html" style="color: white;"><h4>The Glendening Legacy</h4></a>
+        <p class="description-text">One governor changes the rules for nearly twenty-five years</p>
         <p class="author-two"> BY LYNSEY JEFFREY </p>
       </div>
     </div><br><br>
 
     <div class="row">
       <div class="col-lg-3 col-md-12 col-sm-12">
-        <a href="#"><img src="images/prison.jpg" alt="..." style="float:left;"></a>
+        <a href="hogan.html"><img src="images/prison.jpg" alt="..." style="float:left;"></a>
       </div>
       <div class="col-lg-9 col-md-12 col-sm-12">
         <h3>October 16, 2019</h3>
-        <a href="story-template1.html" style="color: white;"><h4>The Hogan Era</h4></a>
-        <p class="description-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        <a href="hogan.html" style="color: white;"><h4>The Hogan Era</h4></a>
+        <p class="description-text">The current governor begins to reverse the trend</p>
         <p class="author-two"> BY HANNAH GASKILL </p>
       </div>
     </div><br>
@@ -275,16 +276,20 @@
 
   <div id="nation-container"><br>
 
-    <p class="opening-text">Nearly 2.3 million people are currently locked up. Tough-on-crime policies from the 90s drastically increased the country’s prison population. States cracked down on juvenile crimes amid fears of a new generation of criminals - the “superpredator.” In the early 2000s, the Supreme Court established different sentencing standards for juveniles on four different occasions. The Court prohibited juvenile life without parole sentences in 2010 and made that decision retroactive in 2016. Here's how some states have responded to the rulings: </p><br>
+    <p class="opening-text">Three Supreme Court decisions have changed the landscape of juvenile justice policy since the “tough on crime” era of the 1990s. Together, they ruled unconstitutional both the death penalty and life without parole for juvenile offenders.<br><br>
+
+      The response to those rulings has been strikingly varied from state to state. Three states had large numbers of juveniles sentenced to life without parole, sentenced to die in prison: Pennsylvania, Michigan and Florida. Pennsylvania stands out for its efforts to resentence and release juveniles.<br><br>
+
+      Three states, Maryland, California and Oklahoma, require a governor’s signature to grant parole rather than the approval of an appointed parole board. Again, those states have responded unevenly. Marsha Levick, the Chief Legal Officer of the Philadelphia-based Juvenile Law Center, captured the essence of the situation when she said, “In America, it’s either justice by geography, justice by race, or justice by wealth.” </p><br>
     <hr style="width:20%; border:1px solid white;"><br><br>
 
     <div class="row">
       <div class="col-lg-3 col-md-12 col-sm-12">
-        <a href="#"><img src="images/gavel.jpg" alt="..." style="float:left;"></a>
+        <a href="pennsylvania.html"><img src="images/gavel.jpg" alt="..." style="float:left;"></a>
       </div>
       <div class="col-lg-9 col-md-12 col-sm-12">
         <h3>October 16, 2019</h3>
-        <a href="story-template1.html" style="color: white;"><h4>Pennsylvania redresses juvenile lifer cases</h4></a>
+        <a href="pennsylvania.html" style="color: white;"><h4>Pennsylvania redresses juvenile lifer cases</h4></a>
         <p class="description-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
         <p class="author-two"> BY CAMILA VELLOSO </p>
       </div>
@@ -292,11 +297,11 @@
 
     <div class="row">
       <div class="col-lg-3 col-md-12 col-sm-12">
-        <a href="#"><img src="images/aclu.jpg" alt="..." style="float:left;"></a>
+        <a href="other-states.html"><img src="images/aclu.jpg" alt="..." style="float:left;"></a>
       </div>
       <div class="col-lg-9 col-md-12 col-sm-12">
         <h3>November 20, 2019</h3>
-        <a href="#" style="color: white;"><h4>States with worst records of juvenile lifer incarceration</h4></a>
+        <a href="other-states.html" style="color: white;"><h4>States with worst records of juvenile lifer incarceration</h4></a>
         <p class="description-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
         <p class="author-two"> BY RIIN ALJAS </p>
       </div>
@@ -304,11 +309,11 @@
 
     <div class="row">
       <div class="col-lg-3 col-md-12 col-sm-12">
-        <a href="#"><img src="images/prison.jpg" alt="..." style="float:left;"></a>
+        <a href="three-states.html"><img src="images/prison.jpg" alt="..." style="float:left;"></a>
       </div>
       <div class="col-lg-9 col-md-12 col-sm-12">
         <h3>December 7, 2019</h3>
-        <a href="#" style="color: white;"><h4>Parole in the hands of governors</h4></a>
+        <a href="three-states.html" style="color: white;"><h4>Parole in the hands of governors</h4></a>
         <p class="description-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
         <p class="author-two"> BY EMILY TOP </p>
       </div>
@@ -316,11 +321,11 @@
 
     <div class="row">
       <div class="col-lg-3 col-md-12 col-sm-12">
-        <a href="#"><img src="images/supreme-court.jpg" alt="..." style="float:left;"></a>
+        <a href="supreme-court.html"><img src="images/supreme-court.jpg" alt="..." style="float:left;"></a>
       </div>
       <div class="col-lg-9 col-md-12 col-sm-12">
         <h3>December 10, 2019</h3>
-        <a href="#" style="color: white;"><h4>Four Supreme Court decisions that changed sentencing for juveniles</h4></a>
+        <a href="supreme-court.html" style="color: white;"><h4>Four Supreme Court decisions that changed sentencing for juveniles</h4></a>
         <p class="description-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
         <p class="author-two"> BY HORUS ALAS </p>
       </div>
@@ -341,8 +346,8 @@
   <h1 style="color: #D9B269; font-size: 1.5em;">Credits</h1><br>
   <p class="credits"><b>Web design and development:</b> Camila Velloso<br><br>
                      <b>Reporting and writing:</b> Camila Velloso, Hannah Gaskill, Emily Top, Athiyah Azeem, Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi and DeLon Thornton<br><br>
-                     <b>Video editing:</b> TBD<br><br>
-                     <b>Podcasts:</b> Hannah Gaskill<br><br>
+                     <b>Data analysis:</b> Riin Aljas, Camila Velloso and Hannah Gaskill<br><br>
+                     <b>Video:</b> Athiyah Azeem, Hannah Gaskill Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi DeLon Thornton, Emily Top and Camila Velloso</b> <br><br>
                      <b>Project editors:</b> Kathy Best, Tom Bettag, Marty Kaiser, Adam Marton and Sean Mussenden<br><br>
                      <b>Audience engagement:</b> Alex Pyles<br><br>
   </p>
