--- a/three-states.html
+++ b/three-states.html
@@ -52,7 +52,7 @@
 
 
     <!-- our CSS  -->
-    <link rel="stylesheet" href="css/common3.css">
+    <link rel="stylesheet" href="css/three-states.css">
 
     <!-- Required for sidescroll -->
     <link rel="stylesheet" href="css/scroll-style.css">
@@ -97,7 +97,7 @@
       <div id="tophat">
         <div class="row">
           <div class="col  one">
-            <a href=""><i class="fa fa-home" style="color: white; font-size: 1.2em;"></i>&nbsp <span class="hide">SERIES | UNEQUAL JUSTICE</span></a>
+            <a href="index.html"><i class="fa fa-home" style="color: white; font-size: 1.2em;"></i>&nbsp <span class="hide">SERIES | UNEQUAL JUSTICE</span></a>
         </div>
 
         <div class="col">
@@ -113,10 +113,10 @@
 
       </div>
 
-      <div class="cover-img relative-img" style="background-image: url('images/senate-chamber.jpg')"></div>
+      <div class="cover-img relative-img" style="background-image: url('images/md-state-house.jpg')"></div>
       <div class="centered">
         <div class="article-title">In The Governor's Hands</span></div><br>
-        <div class="article-desc">The United States is the only country in the world that condems juveniles to spend their entire lives in prison. Along with Maryland and Pennsylvania, Louisiana, Michigan and Florida harbor the largest juvenile lifer populations in the nation.</div><br>
+        <div class="article-desc">The United States is the only country in the world that condems juveniles to spend their entire lives in prison. In Maryland, California and Oklahoma, the power to release those individuals rests with the governor.</div><br>
         <!--<div class="article-author">By CAMILA VELLOSO &nbsp | &nbsp OCTOBER 18, 2019</div>-->
       </div>
 
@@ -170,7 +170,35 @@ Gov. Jerry Brown took action within months of the U.S. Supreme Court’s 2012 ba
 
 <p>“Our statute doesn’t allow us to initiate post conviction applications in non- death penalty cases,” Laughlin said. “At this point, it’s incumbent on the individual to file a post conviction application.”</p><br><br>
 
-<p>That has severely limited the initial number of prisoners being resentenced. Only seven out of the eligible juvenile life-without-parole prisoners have been re-sentenced, according to The Frontier. (Links to an external site.) Most still have life-without-parole sentences. Since 2016 no juvenile lifter has been paroled by either of two governors.</p><br><br>
+<p>That has severely limited the initial number of prisoners being resentenced. Only seven out of the eligible juvenile life-without-parole prisoners have been re-sentenced, according to The Frontier. (Links to an external site.) Most still have life-without-parole sentences. Since 2016 no juvenile lifter has been paroled by either of two governors.</p><br><br><br>
+
+<a href="pennsylvania.html"><p class="more">READ MORE: Pennsylvania leads the nation in resentencing juvenile lifers cases</p></a><br>
+
+<a href="other-states.html"><p class="more">READ MORE: Louisiana, Michigan and Florida among the states with large number of juvenile lifers</p></a><br>
+
+<a href="supreme-court.html"><p class="more">READ MORE: Supreme Court found life sentences for juveniles unconsitutional. Another case on this issue has fallen in their docket.</p></a><br><br>
+
+
+<hr style="border: 1px solid white; width:50%;"><br>
+
+
+<h1 style="color: #D9B269; font-size: 1.5em;">About the project</h1><br>
+
+<p class="about">Sed ullamcorper morbi tincidunt ornare massa eget. Dignissim diam quis enim lobortis scelerisque. Morbi blandit cursus risus at.
+  <br><br> Mus mauris vitae ultricies leo integer malesuada. Eget nunc lobortis mattis aliquam faucibus purus. Mattis pellentesque id nibh tortor id aliquet lectus.
+  <br><br> Justo eget magna fermentum iaculis eu non diam. Magna fringilla urna porttitor rhoncus dolor purus non. Id neque aliquam vestibulum morbi blandit cursus.
+  <br><br>Nunc sed id semper risus in. Vitae congue eu consequat ac felis donec et odio. Ullamcorper velit sed ullamcorper morbi tincidunt ornare. Pretium quam vulputate dignissim suspendisse in.
+  <br><br>Et tortor consequat id porta nibh venenatis cras sed. Nibh mauris cursus mattis molestie a. Imperdiet dui accumsan sit amet. Arcu risus quis varius quam quisque id. Vel fringilla est ullamcorper eget.
+</p><br><br>
+<h1 style="color: #D9B269; font-size: 1.5em;">Credits</h1><br>
+<p class="final-credits"><b>Web design and development:</b> Camila Velloso<br><br>
+                   <b>Reporting and writing:</b> Camila Velloso, Hannah Gaskill, Emily Top, Athiyah Azeem, Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi and DeLon Thornton<br><br>
+                   <b>Data analysis:</b> Riin Aljas, Camila Velloso and Hannah Gaskill<br><br>
+                   <b>Video:</b> Athiyah Azeem, Hannah Gaskill Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi DeLon Thornton, Emily Top and Camila Velloso</b> <br><br>
+                   <b>Project editors:</b> Kathy Best, Tom Bettag, Marty Kaiser, Adam Marton and Sean Mussenden<br><br>
+                   <b>Audience engagement:</b> Alex Pyles<br><br>
+</p><br><br>
+
 
 </div>
 </div>
