--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       <div class="col-lg-9 col-md-12 col-sm-12">
         <h3>October 16, 2019</h3>
         <a href="glendening.html" style="color: white;"><h4>The Glendening Legacy</h4></a>
-        <p class="description-text">One governor changes the rules for nearly twenty-five years</p>
+        <p class="description-text">One governor changes the rules for nearly twenty-five years.</p>
         <p class="author-two"> BY LYNSEY JEFFREY </p>
       </div>
     </div><br><br>
@@ -168,7 +168,7 @@
       <div class="col-lg-9 col-md-12 col-sm-12">
         <h3>October 16, 2019</h3>
         <a href="hogan.html" style="color: white;"><h4>The Hogan Era</h4></a>
-        <p class="description-text">The current governor begins to reverse the trend</p>
+        <p class="description-text">The current governor begins to reverse the trend.</p>
         <p class="author-two"> BY HANNAH GASKILL </p>
       </div>
     </div><br>
@@ -285,7 +285,7 @@
 
     <div class="row">
       <div class="col-lg-3 col-md-12 col-sm-12">
-        <a href="pennsylvania.html"><img src="images/gavel.jpg" alt="..." style="float:left;"></a>
+        <a href="pennsylvania.html"><img src="images/pa-thumb.jpg" alt="..." style="float:left;"></a>
       </div>
       <div class="col-lg-9 col-md-12 col-sm-12">
         <h3>October 16, 2019</h3>
@@ -297,25 +297,25 @@
 
     <div class="row">
       <div class="col-lg-3 col-md-12 col-sm-12">
-        <a href="other-states.html"><img src="images/aclu.jpg" alt="..." style="float:left;"></a>
+        <a href="other-states.html"><img src="images/wire-thumb.jpg" alt="..." style="float:left;"></a>
       </div>
       <div class="col-lg-9 col-md-12 col-sm-12">
         <h3>November 20, 2019</h3>
         <a href="other-states.html" style="color: white;"><h4>States with worst records of juvenile lifer incarceration</h4></a>
         <p class="description-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-        <p class="author-two"> BY RIIN ALJAS </p>
+        <p class="author-two"> BY ATHIYAH AZEEM, DOMINIQUE JANIFER and LAUREN PERRY </p>
       </div>
     </div><br><br>
 
     <div class="row">
       <div class="col-lg-3 col-md-12 col-sm-12">
-        <a href="three-states.html"><img src="images/prison.jpg" alt="..." style="float:left;"></a>
+        <a href="three-states.html"><img src="images/three-thumb.jpg" alt="..." style="float:left;"></a>
       </div>
       <div class="col-lg-9 col-md-12 col-sm-12">
         <h3>December 7, 2019</h3>
         <a href="three-states.html" style="color: white;"><h4>Parole in the hands of governors</h4></a>
         <p class="description-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-        <p class="author-two"> BY EMILY TOP </p>
+        <p class="author-two"> BY JAMIE KERNER and SARA SALIMI</p>
       </div>
     </div><br><br>
 
