--- a/pennsylvania.html
+++ b/pennsylvania.html
@@ -265,7 +265,7 @@ state’s entire juvenile lifer population.</p><br><br>
   <div class="container-fluid" id="scroll">
     <div class="row">
 
-      <div class="col-lg-4">
+      <div class="col-lg-5 col-text">
         <div class='scroll-text'>
           <div class='step'> <!-- Step 1 -->
             <p class="scrolling-text"><span class="red"><strong>Juvenile Justice in Philadelphia</strong></span></p><br>
@@ -301,7 +301,7 @@ state’s entire juvenile lifer population.</p><br><br>
         </div>
       </div>
 
-      <div class="col-lg-8 col-graphic">
+      <div class="col-lg-7 col-graphic">
         <div class='scroll-graphic'>
 
           <div data-step='1' class="scroll-graphic-tab d-block">
