--- a/index.html
+++ b/index.html
@@ -82,7 +82,12 @@
 
   <div class="hero-container">
 
-    <div id="tophat">
+    <div class="navbar">
+        <div class="col-sm-12" id="topbar"> Howard Center for Investigative Journalism | CNS | PBS Newshour
+        </div>
+    </div>
+
+  <!--  <div id="tophat">
       <div class="row">
         <div class="col one">
           <a href="index.html"><i class="fa fa-home" style="color: white; font-size: 1.2em;"></i>&nbsp SERIES | UNEQUAL JUSTICE</a>
@@ -98,7 +103,7 @@
   </div>
 
       </div>
-      </div>
+    </div> -->
 
     <!-- <div class="partners"> HOWARD CENTER | CNS | PBS</div> -->
     <!-- The video -->
@@ -280,7 +285,7 @@
 
       The response to those rulings has been strikingly varied from state to state. Three states had large numbers of juveniles sentenced to life without parole, sentenced to die in prison: Pennsylvania, Michigan and Florida. Pennsylvania stands out for its efforts to resentence and release juveniles.<br><br>
 
-      Three states, Maryland, California and Oklahoma, require a governor’s signature to grant parole rather than the approval of an appointed parole board. Again, those states have responded unevenly. Marsha Levick, the Chief Legal Officer of the Philadelphia-based Juvenile Law Center, captured the essence of the situation when she said, “In America, it’s either justice by geography, justice by race, or justice by wealth.” </p><br>
+      Three states, Maryland, California and Oklahoma, require a governor’s signature to grant parole rather than the approval of an appointed parole board. Again, those states have responded unevenly. Twenty-three states and the District of Columbia have banned life without parole sentences for juveniles. Marsha Levick, the Chief Legal Officer of the Philadelphia-based Juvenile Law Center, captured the essence of the situation when she said, “In America, it’s either justice by geography, justice by race, or justice by wealth.” </p><br>
     <hr style="width:20%; border:1px solid white;"><br><br>
 
     <div class="row">
