--- a/pennsylvania.html
+++ b/pennsylvania.html
@@ -96,7 +96,7 @@
     <div class="hero-container">
 
       <div class="navbar">
-          <div class="col-xs-2 pull-right" id="home"><i class="fa fa-home"></i>&nbsp Home</div>
+          <div class="col-xs-2 pull-right" id="home"><a href="index.html" style="color: white; text-decoration: none;"><i class="fa fa-home"></i>&nbsp <span class="hide-on-mobile">Home<span></a></div>
           <div class="col-xs-8" id="topbar"> Howard Center for Investigative Journalism | CNS | PBS Newshour
           </div>
           <div class="col-xs-2 pull-left" id="social-icons"><i class="fa">&#xf099;</i> &nbsp <i class="fa">&#xf09a;</i></div>
