--- a/pennsylvania.html
+++ b/pennsylvania.html
@@ -570,9 +570,8 @@ state’s entire juvenile lifer population.</p><br><br>
 </div>
 </div>
 
-<!-- c3 script-->
 
-
+<!-- Branding disappears on scroll-->
 <script>
     $(window).scroll(function() {
       if ($(this).scrollTop() > 0) {
@@ -583,6 +582,7 @@ state’s entire juvenile lifer population.</p><br><br>
     });
 </script>
 
+<!-- c3 script-->
    <script type="text/javascript">
    //CHART 1
 
