--- a/index.html
+++ b/index.html
@@ -140,21 +140,26 @@
     <p class="opening-text">Maryland is one of only three states that gives its governor a say in granting parole. In the 1990s, fear over the rise in violent crime led the governor to declare he would sign no paroles for individuals with life sentences, including those who had committed crimes before turning 18.<br><br>
       The Supreme Court has ruled that juveniles must be given a chance for release. Yet some 300 such Maryland inmates have gone twenty-three years with no parole. That is now being challenged in court in a suit against Governor Larry Hogan.</p><br>
 
-    <hr style="width:20%; border:1px solid white;">
+    <hr style="width:20%; border:1px solid white;"><br>
 
-    <h1>Unequal Justice</h1><br>
-    <p class="caption">The story of Maryland’s juvenile lifers and their years without parole was told on the PBS NewsHour by senior correspondent John Yang. The story was researched, shot, and edited by students of the University of Maryland’s Phillip Merrill College of Journalism.</p><br>
+
+
 
     <div class="pbs-video">
       <div class="embed-responsive embed-responsive-16by9">
         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/M2GgIXkvFeE"></iframe>
-      </div>
-      <p class="video-caption">Video courtesy PBS NewsHour</p>
+      </div><br>
+      <!-- <p class="video-caption">Video courtesy PBS NewsHour</p> -->
     </div><br>
+
+    <!-- <h1>Unequal Justice</h1> -->
+    <div class="caption">The story of Maryland’s juvenile lifers and their years without parole was told on the PBS NewsHour by senior correspondent John Yang. The story was researched, shot, and edited by students of the University of Maryland’s Phillip Merrill College of Journalism (<span style="font-style: italic;">Video courtesy PBS NewsHour</span>).</div><br>
 
 <hr style="width:20%; border:1px solid white;">
       <br>
-    <div class="row">
+
+
+  <!--  <div class="row">
       <div class="col-lg-3 col-md-12 col-sm-12">
         <a href="glendening.html"><img src="images/gavel.jpg" alt="..." style="float:left;"></a>
       </div>
@@ -176,7 +181,52 @@
         <p class="description-text">The current governor begins to reverse the trend.</p>
         <p class="author-two"> BY HANNAH GASKILL </p>
       </div>
-    </div><br>
+    </div><br> -->
+
+<div class="article-boxes">
+    <div class="row">
+        <div class="col-md-12">
+          <div class="card flex-md-row box-shadow">
+            <img class="card-img-left flex-auto d-none d-md-block" src="images/glendening-thumb.jpg" alt="Card image cap">
+            <div class="card-body d-flex flex-column">
+              <p class="d-inline-block article-title"><a href="glendening.html" style="color: white !important">The Glendening Legacy</a></p>
+              <p class="card-text article-blurb">One governor changes the rules for nearly twenty-five years.</p>
+              <p class="card-text article-author">By Lysney Jeffery</p>
+            </div>
+
+          </div>
+        </div>
+      </div><br>
+
+      <div class="row">
+          <div class="col-md-12">
+            <div class="card flex-md-row box-shadow">
+              <img class="card-img-left flex-auto d-none d-md-block" src="images/hogan.jpg" alt="Card image cap">
+              <div class="card-body d-flex flex-column">
+                <p class="d-inline-block article-title"><a href="hogan.html" style="color: white !important">The Hogan Era</a></p>
+                <p class="card-text article-blurb">The current governor begins to reverse the trend.</p>
+                <p class="card-text article-author">By Hannah Gaskill</p>
+              </div>
+
+            </div>
+          </div>
+        </div><br>
+
+        <div class="row">
+            <div class="col-md-12">
+              <div class="card flex-md-row box-shadow">
+                <img class="card-img-left flex-auto d-none d-md-block" src="images/lifers.jpg" alt="Card image cap">
+                <div class="card-body d-flex flex-column">
+                  <p class="d-inline-block article-title"><a href="lifer-profiles.html" style="color: white !important">Meet the characters</a></p>
+                  <p class="card-text article-blurb">Hear Earl Young, Mary Brown-Bey, Calvin McNeill and former Governor Parris Glendening talk about their experiences.</p>
+                  <p class="card-text article-author">By CNS Staff</p>
+                </div>
+
+              </div>
+            </div>
+          </div>
+</div>
+
 <!--<h1>The Glendening Legacy</h1> -->
     <!-- <p class="author"> BY AUTHOR NAME </p>
     <p class="date"> December 15, 2019</p><br> -->
@@ -191,6 +241,7 @@
 
   -->
 
+<!--
         <hr style="border: 1px solid white; width:20%;">
             <h1>Meet the juvenile lifers</h1>
             <p class="opening-text">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p><br><br>
@@ -209,7 +260,7 @@
 
               <a href="#"><p class="more">WATCH: Maryland juvenile lifers denied meaningful opportunity for release despite parole-eligible sentences <p></a><br><br>
 
-            </div>
+            </div> -->
 
 <!--
 <hr style="border: 1px solid white; width:20%;">
@@ -288,6 +339,68 @@
       Three states, Maryland, California and Oklahoma, require a governor’s signature to grant parole rather than the approval of an appointed parole board. Again, those states have responded unevenly. Twenty-three states and the District of Columbia have banned life without parole sentences for juveniles. Marsha Levick, the Chief Legal Officer of the Philadelphia-based Juvenile Law Center, captured the essence of the situation when she said, “In America, it’s either justice by geography, justice by race, or justice by wealth.” </p><br>
     <hr style="width:20%; border:1px solid white;"><br><br>
 
+
+
+    <div class="article-boxes">
+        <div class="row">
+            <div class="col-md-12">
+              <div class="card flex-md-row box-shadow">
+                <img class="card-img-left flex-auto d-none d-md-block" src="images/pen-thumb.jpg" alt="Card image cap">
+                <div class="card-body d-flex flex-column">
+                  <p class="d-inline-block article-title"><a href="pennsylvania.html" style="color: white !important">Pennsylvania redresses juvenile lifer cases</a></p>
+                  <p class="card-text article-blurb">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                  <p class="card-text article-author">By Camila Velloso</p>
+                </div>
+
+              </div>
+            </div>
+          </div><br>
+
+          <div class="row">
+              <div class="col-md-12">
+                <div class="card flex-md-row box-shadow">
+                  <img class="card-img-left flex-auto d-none d-md-block" src="images/fence-thumb.jpg" alt="Card image cap">
+                  <div class="card-body d-flex flex-column">
+                    <p class="d-inline-block article-title"><a href="other-states.html" style="color: white !important">States with worst records of juvenile lifer incarceration</a></p>
+                    <p class="card-text article-blurb">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <p class="card-text article-author">By Athiyah Azeem, Dominique Janifer and Lauren Perry</p>
+                  </div>
+
+                </div>
+              </div>
+            </div><br>
+
+            <div class="row">
+                <div class="col-md-12">
+                  <div class="card flex-md-row box-shadow">
+                    <img class="card-img-left flex-auto d-none d-md-block" src="images/statehouse-thumb.jpg" alt="Card image cap">
+                    <div class="card-body d-flex flex-column">
+                      <p class="d-inline-block article-title"><a href="three-states.html" style="color: white !important">Parole in the hands of governors</a></p>
+                      <p class="card-text article-blurb">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                      <p class="card-text article-author">By Jaime Kerner and Sara Salimi</p>
+                    </div>
+
+                  </div>
+                </div>
+              </div><br>
+
+              <div class="row">
+                  <div class="col-md-12">
+                    <div class="card flex-md-row box-shadow">
+                      <img class="card-img-left flex-auto d-none d-md-block" src="images/sc-thumb.jpg" alt="Card image cap">
+                      <div class="card-body d-flex flex-column">
+                        <p class="d-inline-block article-title"><a href="supreme-court.html" style="color: white !important">Five Supreme Court decisions that changed sentencing for juveniles</a></p>
+                        <p class="card-text article-blurb">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        <p class="card-text article-author">By Tom Bettag</p>
+                      </div>
+
+                    </div>
+                  </div>
+                </div><br>
+    </div>
+
+
+<!--
     <div class="row">
       <div class="col-lg-3 col-md-12 col-sm-12">
         <a href="pennsylvania.html"><img src="images/pa-thumb.jpg" alt="..." style="float:left;"></a>
@@ -334,7 +447,7 @@
         <p class="description-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
         <p class="author-two"> BY HORUS ALAS </p>
       </div>
-    </div><br><br>
+    </div><br><br> -->
 
   </div><!-- END The Nation Container -->
 
