updates to data

--- a/pennsylvania.html
+++ b/pennsylvania.html
@@ -292,7 +292,7 @@ state’s entire juvenile lifer population.</p><br><br>
           </div>
 
           <div class='step'> <!-- Step 5 -->
-            <p class="scrolling-text">Since 2016, when the Supreme Court ruled mandatory life sentences for juveniles unconsitutional, Philadelphia has released 170 juvenile lifers.</p>
+            <p class="scrolling-text">Philadelphia has released 171 juvenile lifers.</p>
           </div>
           <div class='step'> <!-- Step 6 -->
             <p class="scrolling-text">27 juvenile lifers are pending resentencing.</p>
@@ -606,10 +606,10 @@ state’s entire juvenile lifer population.</p><br><br>
                  x : 'x',
                    columns: [
                      ['x', 2016, 2017, 2018, 2019],
-                     ['30-39yrs', 1, 1, 2, 9],
-         ['40-49yrs', 0, 15, 39, 25],
-         ['50-59yrs', 5, 61, 13, 6],
-         ['60-69yrs', 1, 12, 7, 3]
+                     ['30-39yrs', 1, 2, 17, 0],
+         ['40-49yrs', 1, 38, 35, 2],
+         ['50-59yrs', 33, 51, 4, 0],
+         ['60-69yrs', 9, 8, 1, 0]
                    ],
                    type: 'bar'
                },
