--- a/pennsylvania.html
+++ b/pennsylvania.html
@@ -226,7 +226,7 @@ Supreme Court took up Montgomery v. Louisiana.</p><br><br>
 Waymart State Correctional Institution watching C-SPAN when he learned the U.S.
 Supreme Court held that the Miller ruling applied retroactively.</p><br><br>
 
-<p>On December 22, 2016, 32 at age 59, Baynes was resentenced to 30 years to life and became
+<p>On December 22, 2016, at age 59, Baynes was resentenced to 30 years to life and became
 eligible for parole, having been awarded credit for time served.</p><br><br>
 
 <p>To the prison staff members, who provided character reference letters, Baynes was an
@@ -517,6 +517,10 @@ state’s entire juvenile lifer population.</p><br><br>
     <p>Grant moved to an investigator position, where he’s been working since, performing
     services for several units, including felony waivers, municipal court and major crimes.
     Joseph Baynes also found a home at the Defender Association of Philadelphia, where he’s worked as a records room clerk since July 2018. </p><br><br>
+
+
+    <p><img src="images/baynes-levin.jpg" alt="Joseph Baynes and public defender Helen Levin" width="100%"></p>
+    <p class="photo-caption">Joseph Baynes with his public defender Helen Levin, one of the three co-chairs of the JLWOP unit. (Photo by Camila Velloso | Capital News Service)</p><br><br>
 
     <p>“Its an incredibly important moment in justice reform in this country because the
     successful reintegration of these individuals, should force us to rethink our whole kind of justice paradigm,” Levick said “I think these men and women are showing exactly how worthy they are of that option, and I hope that we can look at their experiences and learn from them.”</p><br><br>
