scrolling image update

--- a/pennsylvania.html
+++ b/pennsylvania.html
@@ -313,37 +313,37 @@ state’s entire juvenile lifer population.</p><br><br>
         <div class='scroll-graphic'>
 
           <div data-step='1' class="scroll-graphic-tab d-block">
-            <img class="img-fluid img-fluid-trees" src="images/dark-dots.png" alt="" />
+            <img class="img-fluid img-fluid-trees" src="images/dots-new.png" alt="" />
           </div>
 
           <div data-step='2' class="scroll-graphic-tab d-none">
-            <img class="img-fluid img-fluid-trees" src="images/data-race-min1.png" alt="" />
+            <img class="img-fluid img-fluid-trees" src="images/dots-race-min-new.png" alt="" />
           </div>
           <div data-step='3' class="scroll-graphic-tab d-none">
-            <img class="img-fluid img-fluid-trees" src="images/data-race-white.png" alt="" />
+            <img class="img-fluid img-fluid-trees" src="images/dots-race-white-new.png" alt="" />
           </div>
 
 
           <div data-step='4' class="scroll-graphic-tab d-none">
-            <img class="img-fluid img-fluid-trees" src="images/data-gender.png" alt="" />
+            <img class="img-fluid img-fluid-trees" src="images/dots-gender-new.png" alt="" />
           </div>
 
 
           <div data-step='5' class="scroll-graphic-tab d-none">
-            <img class="img-fluid img-fluid-trees" src="images/data-released.png" alt="" />
+            <img class="img-fluid img-fluid-trees" src="images/dots-released-new.png" alt="" />
           </div>
 
           <div data-step='6' class="scroll-graphic-tab d-none">
-            <img class="img-fluid img-fluid-trees" src="images/data-pending.png" alt="" />
+            <img class="img-fluid img-fluid-trees" src="images/dots-pending-new.png" alt="" />
           </div>
 
 
           <div data-step='7' class="scroll-graphic-tab d-none">
-            <img class="img-fluid img-fluid-trees" src="images/data-resentenced.png" alt="" />
+            <img class="img-fluid img-fluid-trees" src="images/dots-resentenced-new.png" alt="" />
           </div>
 
           <div data-step='8' class="scroll-graphic-tab d-none">
-            <img class="img-fluid img-fluid-trees" src="images/data-life.png" alt="" />
+            <img class="img-fluid img-fluid-trees" src="images/dots-life-new.png" alt="" />
           </div>
 
         </div>
