--- a/glendening.html
+++ b/glendening.html
@@ -147,7 +147,7 @@
 <p>In many places, “equal justice under law” rings false. Justice is particularly unequal in Maryland, a traditionally progressive breeding ground for liberal policy. The Supreme Court ruled in 2016 that juvenile life without parole is unconstitutional no matter when a
 defendant was sentenced. Yet in Maryland, some 300 juveniles are held in a prison system that’s gone nearly 25 years without a single parole.</p><br><br>
 
-<p><iframe title="Juvenile lifers by Maryland counties" aria-label="USA maryland counties choropleth map" id="datawrapper-chart-CmILU" src="//datawrapper.dwcdn.net/CmILU/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe></p><br><br>
+<p><iframe title="" aria-label="USA maryland counties choropleth map" id="datawrapper-chart-CmILU" src="//datawrapper.dwcdn.net/CmILU/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe></p><br><br>
 
 
 <p>Maryland is one of only three states that requires a governor’s signature to grant parole. This system functioned until the 1990s, when heightening crime rates spurred “tough on crime” policies and public demonization of prisoners. Crime and punishment became a hot issue in Maryland in 1993, when “model inmate” Rodney Stokes killed his former girlfriend and himself while on work release, the last step before parole. </p><br><br>
@@ -222,7 +222,8 @@ granted by governors over the years meet this standard. But advocates say those 
 </script>
 
 <script type="text/javascript">
-!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();
+
+  !function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();
 
 </script>
 
