--- a/glendening.html
+++ b/glendening.html
@@ -147,7 +147,15 @@
 <p>In many places, “equal justice under law” rings false. Justice is particularly unequal in Maryland, a traditionally progressive breeding ground for liberal policy. The Supreme Court ruled in 2016 that juvenile life without parole is unconstitutional no matter when a
 defendant was sentenced. Yet in Maryland, some 300 juveniles are held in a prison system that’s gone nearly 25 years without a single parole.</p><br><br>
 
-<iframe title="" aria-label="USA maryland counties choropleth map" id="datawrapper-chart-CmILU" src="//datawrapper.dwcdn.net/CmILU/3/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();</script>
+<div class="incarceration-graph"><br>
+  <div class="graphic-container">
+    <div class="chart-title"><b>Juvenile lifer incarceration by Maryland counties</b></div>
+    <div class="chart-description">Baltimore City, followed by Prince George’s County and Baltimore County, has the most incarcerated juvenile lifers at 115.</div><br>
+    <div class="chart-author">By CAMILA VELLOSO</div><br>
+    <img src="images/md-counties.png" alt="Map of juvenile lifers by Maryland counties" width="100%"><br><br>
+    <div class="chart-source">Source: Maryland Department of Public Safety and Correctional Services Recruitment</div><br>
+</div>
+</div><br><br>
 
 
 <p>Maryland is one of only three states that requires a governor’s signature to grant parole. This system functioned until the 1990s, when heightening crime rates spurred “tough on crime” policies and public demonization of prisoners. Crime and punishment became a hot issue in Maryland in 1993, when “model inmate” Rodney Stokes killed his former girlfriend and himself while on work release, the last step before parole. </p><br><br>
@@ -221,11 +229,7 @@ granted by governors over the years meet this standard. But advocates say those 
     });
 </script>
 
-<script type="text/javascript">
 
-  !function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();
-
-</script>
 
 <!-- c3 script-->
    <script type="text/javascript">
