--- a/index.html
+++ b/index.html
@@ -462,12 +462,15 @@
     <br><br>Et tortor consequat id porta nibh venenatis cras sed. Nibh mauris cursus mattis molestie a. Imperdiet dui accumsan sit amet. Arcu risus quis varius quam quisque id. Vel fringilla est ullamcorper eget.
   </p><br><br>
   <h1 style="color: #D9B269; font-size: 1.5em;">Credits</h1><br>
-  <p class="credits"><b>Web design and development:</b> Camila Velloso<br><br>
+  <p class="credits">
+
+                     <b>Web design and development:</b> Camila Velloso<br><br>
                      <b>Reporting and writing:</b> Camila Velloso, Hannah Gaskill, Emily Top, Athiyah Azeem, Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi and DeLon Thornton<br><br>
                      <b>Data analysis:</b> Riin Aljas, Camila Velloso and Hannah Gaskill<br><br>
                      <b>Video:</b> Athiyah Azeem, Hannah Gaskill Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi DeLon Thornton, Emily Top and Camila Velloso</b> <br><br>
                      <b>Project editors:</b> Kathy Best, Tom Bettag, Marty Kaiser, Adam Marton and Sean Mussenden<br><br>
                      <b>Audience engagement:</b> Alex Pyles<br><br>
+                     <b>Top photo:</b> Courtesy of Maryland Department of Public Safety and Correctional Services Recruitment<br><br>
   </p>
 
 
