--- a/other-states.html
+++ b/other-states.html
@@ -255,6 +255,7 @@ without parole in the case of first-degree murder.</p><br><br>
                    <b>Video:</b> Athiyah Azeem, Hannah Gaskill Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi DeLon Thornton, Emily Top and Camila Velloso</b> <br><br>
                    <b>Project editors:</b> Kathy Best, Tom Bettag, Marty Kaiser, Adam Marton and Sean Mussenden<br><br>
                    <b>Audience engagement:</b> Alex Pyles<br><br>
+                   <b>Top photo:</b> Courtesy of Maryland Department of Public Safety and Correctional Services Recruitment<br><br>
 </p><br><br>
 
 
