--- a/pennsylvania.html
+++ b/pennsylvania.html
@@ -569,6 +569,7 @@ state’s entire juvenile lifer population.</p><br><br>
                        <b>Video:</b> Athiyah Azeem, Hannah Gaskill Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi DeLon Thornton, Emily Top and Camila Velloso</b> <br><br>
                        <b>Project editors:</b> Kathy Best, Tom Bettag, Marty Kaiser, Adam Marton and Sean Mussenden<br><br>
                        <b>Audience engagement:</b> Alex Pyles<br><br>
+                       <b>Top photo:</b> Camila Velloso<br><br>
     </p><br><br>
 
 </div>
