--- a/glendening.html
+++ b/glendening.html
@@ -144,21 +144,7 @@
 <p class="date">NOVEMBER 4, 2019</p><br><br>
 
 
-<p>In many places, “equal justice under law” rings false. Justice is particularly unequal in Maryland, a traditionally progressive breeding ground for liberal policy. The Supreme Court ruled in 2016 that juvenile life without parole is unconstitutional no matter when a
-defendant was sentenced. Yet in Maryland, some 300 juveniles are held in a prison system that’s gone nearly 25 years without a single parole.</p><br><br>
-
-<div class="incarceration-graph"><br>
-  <div class="graphic-container">
-    <div class="chart-title"><b>Juvenile lifer incarceration by Maryland counties</b></div>
-    <div class="chart-description">Baltimore City, followed by Prince George’s County and Baltimore County, has the most incarcerated juvenile lifers at 115.</div><br>
-    <div class="chart-author">By CAMILA VELLOSO</div><br>
-    <img src="images/md-counties.png" alt="Map of juvenile lifers by Maryland counties" width="100%"><br><br>
-    <div class="chart-source">Source: Maryland Department of Public Safety and Correctional Services Recruitment</div><br>
-</div>
-</div><br><br>
-
-
-<p>Maryland is one of only three states that requires a governor’s signature to grant parole. This system functioned until the 1990s, when heightening crime rates spurred “tough on crime” policies and public demonization of prisoners. Crime and punishment became a hot issue in Maryland in 1993, when “model inmate” Rodney Stokes killed his former girlfriend and himself while on work release, the last step before parole. </p><br><br>
+<p>In many places “equal justice under law” rings false. Even in Maryland, a traditionally progressive breeding ground for liberal policy, it is far from the truth. The U.S. Supreme Court ruled that juvenile life sentences without the possibility of parole are unconstitutional; that to deny a meaningful chance for release is cruel and unusual punishment. Yet in Maryland, some 300 juveniles remain imprisoned after nearly 25 years passed without a single parole. </p><br><br>
 
 <!-- first graphic container-->
 <div class="incarceration-graph"><br>
@@ -172,14 +158,32 @@ defendant was sentenced. Yet in Maryland, some 300 juveniles are held in a priso
   </div><br><br>  <!-- END first graphic container-->
 
 
-<p>The issue became the center of the gubernatorial elections in 1994. In an effort to better low approval ratings and address the crime issue, new Democratic governor Parris
-Glendening announced his “life means life” policy in his first year in office. It meant he would never sign parole for lifers. All Maryland governors followed suit until 2019, when current Gov. Larry Hogan paroled a handful of lifers. </p><br><br>
+<p>Maryland is one of only three states that requires a governor’s signature to grant parole in the case of life sentences. This system functioned until the 1990s, when rising crime rates spurred “tough-on-crime” policies and public demonization of prisoners. Crime and punishment became hot issues in Maryland in 1993. Then “model inmate” Rodney Stokes &mdash; on work release, the last step before parole &mdash; killed his former girlfriend and himself. </p><br><br>
 
-<p>Glendening’s decision delayed lifers’ releases indefinitely, including even those whose papers were already on his desk. “Life means life” is de-facto life without parole for juvenlie lifers in Maryland, though they were originally sentenced to life with the
-opportunity for parole. The Supreme Court has said that juveniles must have a “meaningful opportunity for release.” The state of Maryland argues that commutations
-granted by governors over the years meet this standard. But advocates say those opportunities are more like winning the lottery than earning parole.</p><br><br>
+<p>Anger over the Stokes case and rising crime rates made tougher punishment an issue in the 1994 gubernatorial race.  To address low approval ratings and the crime issue, Democratic Gov. Parris Glendening announced his “life means life” policy and said he would never sign parole for lifers. Maryland governors followed suit until Republican Gov. Larry Hogan paroled three juvenile lifers this year.</p><br><br>
 
-<p>Glendening has since renounced his “life means life” decision. He’s said repeatedly in public that it was wrong and should be changed legislatively in a potential bill that would completely remove the governor from the parole process. Now, the issue is facing more pressure from a 2016 ACLU lawsuit suing Hogan for denying juvenile lifers a meaningful opportunity for release. The case remains in court proceedings and Maryland’s juvenile lifers remain in prison, waiting.</p><br><br>
+<p>Glendening’s decision delayed the releases of lifers indefinitely, including even those whose papers were already on his desk. “Life means life” is de-facto life without parole for Maryland’s juvenile lifers, who originally were sentenced to life with the opportunity for parole. </p><br><br>
+
+
+<div class="incarceration-graph"><br>
+  <div class="graphic-container">
+    <div class="chart-title"><b>Juvenile lifer incarceration by Maryland counties</b></div>
+    <div class="chart-description">Baltimore City, followed by Prince George’s County and Baltimore County, has the most incarcerated juvenile lifers at 115.</div><br>
+    <div class="chart-author">By CAMILA VELLOSO</div><br>
+    <img src="images/md-counties-map-2.png" alt="Map of juvenile lifers by Maryland counties" width="100%"><br><br>
+    <div class="chart-source">Source: Maryland Department of Public Safety and Correctional Services Recruitment</div><br>
+</div>
+</div><br><br>
+
+<p>The state argues that gubernatorial commutations, executive orders to shorten a sentence, over the years meet the Supreme Court’s standard. But advocates say commutations are more like winning the lottery than earning parole.</p><br><br>
+
+<p>Glendening has since said his “life means life” decision was wrong. He has publically and repeatedly advocated to change it by law, removing the governor from the parole process. </p><br><br>
+
+<p>“I made a mistake,” he said in an interview with PBS NewsHour correspondent John Yang. “It was a very bad mistake in the sense that it impacted people, it impacted subsequent administrations, but it was a mistake. And I think it's important to acknowledge.</p><br><br>
+
+<p>“Of all the powers you want, to be involved in that kind of decision is not one of them,” the former governor said. “The issues are too emotional and too political to put it on the desk of someone who is going to turn around in a few months, a year and run for election. And it almost asks for political decisions on something that should not be political.” </p><br><br>
+
+<p>Now, the issue faces more pressure. In 2016 the ACLU sued Hogan for denying juvenile lifers a meaningful opportunity for release. The case remains in court while Maryland’s juvenile lifers wait in prison.</p><br><br>
 
     <a href="hogan.html"><p class="more">READ MORE: Current Maryland Governor Larry Hogan diverts from decades old "life means life policy"</p></a><br>
 
