--- a/index.html
+++ b/index.html
@@ -83,8 +83,10 @@
   <div class="hero-container">
 
     <div class="navbar">
-        <div class="col-sm-12" id="topbar"> Howard Center for Investigative Journalism | CNS | PBS Newshour
+      <div class="col-xs-2 pull-right"></div>
+        <div class="col-xs-10" id="topbar"> Howard Center for Investigative Journalism | CNS | PBS Newshour
         </div>
+        <div class="col-xs-2 pull-left" id="social-icons"><i class="fa">&#xf099;</i> &nbsp <i class="fa">&#xf09a;</i></div>
     </div>
 
   <!--  <div id="tophat">
