--- a/other-states.html
+++ b/other-states.html
@@ -162,7 +162,7 @@ cases. It wasn’t until June, 2018 that Chief Justice Stephen Markman, writing 
 
 
 <!-- first graphic container-->
-<div class="incarceration-graph">
+<div class="incarceration-graph"><br>
     <div class="graphic-container">
       <div class="chart-title"><b>Incarceration rates for juvenile lifers in Michigan</b></div>
       <div class="chart-description">The number of black juveniles sentenced to life without parole spiked in the '90s, but decreased for white juveniles.</div><br>
@@ -176,7 +176,7 @@ cases. It wasn’t until June, 2018 that Chief Justice Stephen Markman, writing 
 
 
   <!-- first graphic container-->
-  <div class="incarceration-graph">
+  <div class="incarceration-graph"><br>
       <div class="graphic-container">
         <div class="chart-title"><b>Resentencing rates for juvenile lifers in Michigan</b></div>
         <div class="chart-description">Of the 181 inmates resentenced in Michigan, the rate of resentencing for black juveniles dropped after 2017, but has been rising for white juveniles.</div><br>
