--- a/glendening.html
+++ b/glendening.html
@@ -121,9 +121,9 @@
 
       </div> -->
 
-      <div class="cover-img relative-img" style="background-image: url('images/senate-chamber.jpg')"></div>
+      <div class="cover-img relative-img" style="background-image: url('images/aerial-shot.jpg')"></div>
       <div class="centered">
-        <div class="article-title">Glendening's Legacy</span></div><br>
+        <div class="article-title">The Glendening Legacy</span></div><br>
         <div class="article-desc">Former Maryland Governor Parris Glendening spearheaded the "life means ;ife" policy that would stay in effect decades after leaving office. He now regrets that decision.</div><br>
         <!--<div class="article-author">By CAMILA VELLOSO &nbsp | &nbsp OCTOBER 18, 2019</div>-->
       </div>
@@ -206,6 +206,7 @@
                        <b>Video:</b> Athiyah Azeem, Hannah Gaskill Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi DeLon Thornton, Emily Top and Camila Velloso</b> <br><br>
                        <b>Project editors:</b> Kathy Best, Tom Bettag, Marty Kaiser, Adam Marton and Sean Mussenden<br><br>
                        <b>Audience engagement:</b> Alex Pyles<br><br>
+                       <b>Top photo:</b> Mid-Atlantic Aerial, LLC<br><br>
     </p><br><br>
 
 </div>
