--- a/hogan.html
+++ b/hogan.html
@@ -121,7 +121,7 @@
 
       </div> -->
 
-      <div class="cover-img relative-img" style="background-image: url('images/senate-chamber.jpg')"></div>
+      <div class="cover-img relative-img" style="background-image: url('images/flag1.jpg')"></div>
       <div class="centered">
         <div class="article-title">The Hogan Era</span></div><br>
         <div class="article-desc">Governor Larry Hogan grants parole for three juvenile lifers - the first parolees in over two decades. </div><br>
@@ -205,6 +205,7 @@ granted by governors over the years meet this standard. But advocates say those 
                        <b>Video:</b> Athiyah Azeem, Hannah Gaskill Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi DeLon Thornton, Emily Top and Camila Velloso</b> <br><br>
                        <b>Project editors:</b> Kathy Best, Tom Bettag, Marty Kaiser, Adam Marton and Sean Mussenden<br><br>
                        <b>Audience engagement:</b> Alex Pyles<br><br>
+                       <b>Top photo:</b> Capital News Service<br><br>
     </p><br><br>
 
 </div>
