--- a/lifer-profiles.html
+++ b/lifer-profiles.html
@@ -122,23 +122,22 @@
 
       </div> -->
 
-      <div class="cover-img relative-img" style="background-image: url('images/juvies.jpg')">
+    <!--  <div class="cover-img relative-img" style="background-image: url('images/juvies.jpg')">
         <div class="header-title">
         <div class="article-title">Meet The Juvenile Lifers</span></div><br>
         <div class="article-desc">Earl Young, Mary Brown-Bey and Calvin McNeill spent nearly 100 years incarcerated collectively. Here are their stories.</div><br>
       </div>
       </div>
 
-      <div class="centered">
-      <div class="row">
-      <div class="col-lg-5">
-        <div class="article-title">In The Governor's Hands</span></div><br>
-        <div class="article-desc">The United States is the only country in the world that condems juveniles to spend their entire lives in prison. Along with Maryland and Pennsylvania, Louisiana, Michigan and Florida harbor the largest juvenile lifer populations in the nation.</div><br>
-        <!--<div class="article-author">By CAMILA VELLOSO &nbsp | &nbsp OCTOBER 18, 2019</div>-->
-      </div>
-    </div>
-    </div>
-      </div>
+  </div> -->
+
+
+        <div class="cover-img relative-img" style="background-image: url('images/glendening-legacy.jpg')"></div>
+        <div class="centered">
+          <div class="article-title">Meet The Juvenile Lifers</span></div><br>
+          <div class="article-desc">Earl Young, Mary Brown-Bey and Calvin McNeill spent nearly 100 years incarcerated collectively. Here are their stories.</div><br>
+          <!--<div class="article-author">By CAMILA VELLOSO &nbsp | &nbsp OCTOBER 18, 2019</div>-->
+        </div>
 
     </div><!-- END Hero Container -->
 
@@ -148,113 +147,73 @@
 
 <div class="story-container">
   <a name="story"><div class="container"></a><br><br>
-    <p style="text-align: center;"><i class="fab fa-facebook-f"></i> &nbsp <i class="fab fa-twitter-square"></i></p>
 
-
-
-<p class="state">EARL YOUNG</p><br>
-<p class="author">By <span>DELON THORNTON</span> and <span>CAMILA VELLOSO</span></p>
-
-<p class="date">NOVEMBER 4, 2019</p><br><br>
+<div class="border"></div><br>
+<p class="state">EARL YOUNG</p>
+<p class="author">By <span>DELON THORNTON</span></p><br>
 
 <p>Earl Young spent 34 years and 7 months incarcerated. Arrested at 16 in 1984 with no prior record, Young was convicted of murder, armed robbery and illegal possession of a firearm. A year later he was sentenced to concurrent sentences of the balance of his natural life for murder, ten years for the armed robbery and 3 years for posession of a weapon.</p><br><br>
 
-<p>Young struggled his first years in prison.
-“I refused to do a lot of things when I went into the system,” Young said. “I was bitter.”
-Like most lifers in Maryland, Young was sent to a maximum security prison.</p><br><br>
-
-<p>Young eventually got serious about his life and earned his GED in 1993. He passed the exam on his first try. But his college dreams were cut short with the passage of Clinton’s Violent Crime Control and Law Enforcement Act  in 1994, which curtailed federal pell grant funding for higher-education programs in prison.</p><br><br>
-
-<p>He ended up losing much more. His parents, sister, cousin and mother-in-law died during his incarceration.</p><br><br>
-
-<p>“As the clock kept ticking, those who knew me were dwindling death,” Young said.</p><br><br>
-
-<p>But not all hope was lost. Young said being in prison helped him grow and develop as a person. He made it through with the guidance and nurturing of other prisoners and staff.</p><br><br>
-
-<p>Despite being a model prisoner, the parole board continually passed on paroling or commuting Young’s sentence because of Glendening’s “life means life” policy.</p><br><br>
-
-<p>He was denied six times for parole.</p><br><br>
 
 <div class="video-content">
   <div class="embed-responsive embed-responsive-16by9">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/M2GgIXkvFeE"></iframe>
   </div>
-  <div class="video-caption">Video edited by DeLon Thornton | Capital News Service.</div>
-</div><br>
+</div><br><br>
 
 
-<p>His life sentence was first commuted to a sentence to 49 years plus “good time.” He was paroled on January 5, 2019. He stayed at a medium security prison until April due a shortage of case managers. “There were 5 councilors for 800 people. It was grossly understaffed,” Young said. He was supposed to go directly into the pre-release system, but instead was transferred to a minimum security prison.</p><br><br>
+<div class="border"></div><br>
 
-<p>He only left Jessup Correctional Institution, a maximum security prison, on May 15. He was then sent to a minimum security prison, where he remained for 4-5 weeks before case managers at the prison realized he was wasn’t supposed to be there. They immediately sent him to a pre-release unit in Baltimore. He was released on July 18, 2019.
-And after three decades behind bars, Young finally went home to the only family he has left, his wife of six years.</p><br><br>
+<p class="state">MARY BROWN-BEY</p>
+<p class="author">By <span>SARA SALIMI</span></p><br>
 
-<p>By Young’s calculations, he was only supposed to serve 15 years minus diminution credits. And after three decades behind bars, Young finally went home to the only family he has left, his wife of six years.</p><br><br>
+<p>Mary Brown-Bey had served 20 years for 1st degree murder. convicted at the age of 15. Once Glendening stopped signing paroles, Brown-Bay would remain in prison another 11 years.</p><br><br>
 
-<p>Now, he works with kids in the Baltimore public school system, determined to keep them from going down the same path.</p><br><br>
+  <div class="pbs-video">
+  <div class="embed-responsive embed-responsive-16by9">
+    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/M2GgIXkvFeE"></iframe>
+  </div>
+</div><br><br>
 
-<p>“When I left the streets, I was their age,” Young said. “I’m just doing my little part. If we all do our little parts, we’ll make a difference.”</p><br><br>
+<div class="border"></div><br>
 
-<p>There are still some remnants of prison Young can’t shake. He cycles to work every day and likes playing handball.</p><br><br>
+<p class="state">CALVIN MCNEILL</p>
+<p class="author">By <span>JAIME KERNER</span></p><br>
 
-<p>“I'm scared to not be in shape,” Young said
-But perhaps more consequentially, Young feels the weight of leaving friends behind.</p><br><br>
-
-<p>Young hopes to effect change for over 200 parole-eligible juvenile lifers by telling his story.   </p><br><br><br>
-
-
-<p class="state">MARY BROWN-BEY</p><br>
-<p class="author">By <span>HANNAH GASKILL</span> and <span>SARA SALIMI</span></p>
-
-<p class="date">NOVEMBER 4, 2019</p><br><br>
-
-<p>While Maryland and Oklahoma have been slow to change their juvenile parole procedures, California governors vowed to change theirs—and largely have.
-Gov. Jerry Brown took action within months of the U.S. Supreme Court’s 2012 ban on mandatory life sentences without parole for juvenile offenders. He signed Senate Bill 9 in January 2013. That allowed those given life without parole as juveniles to request a new sentencing hearing.</p><br><br>
-
-<p>In 2016 the U.S. Supreme Court mad it clear that its 2012 decision applied retroactively. In 2017 Gov. Brown signed Senate Bill 394 which outlawed life without parole sentences. It required that juveniles serving life sentences be given a parole hearing 25 years after being convicted.</p><br><br>
-
-<p>Brown’s successor, Gov. Gavin Newsom, went further, vowing in January 2019 to “end the juvenile justice system as we know it.” He proposes moving the Division of Juvenile Justice from the California Dept. of Corrections and Rehabilitation and placing it under the supervision of the Health and Human Services Agency. “Juvenile justice should be about helping kids imagine and pursue new lives — not jumpstarting the revolving door of the criminal justice system,” Newsom said. “The system should be helping these kids unpack trauma and adverse experiences many have suffered.“</p><br><br>
-
-<p>He was denied six times for parole.</p><br><br>
+<p>More than 300 juvenile lifers, sit in maryland prisons…among them 55 year old Calvin Mcneill, convicted of first degree murder at 17. we spoke to him by phone.</p><br><br>
 
 <div class="video-content">
   <div class="embed-responsive embed-responsive-16by9">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/M2GgIXkvFeE"></iframe>
   </div>
-  <div class="video-caption">Video edited by DeLon Thornton | Capital News Service.</div>
-</div><br>
+
+</div><br><br>
+
+<a href="glendening.html"><p class="more">READ MORE: Former Maryland Governor Parris Glendening regrets his "life means life" policy, which condemned hundreds of juvenile lifers</p></a><br>
 
 
-<p>In March Newsom suspended executions for as long as he is in office.  In September he granted clemency to 21 violent offenders in California. Seven of those had been sentenced to life without parole. Clemency does not free them but allows these individuals to have their cases considered by a parole board. Republicans criticized Newsom saying, “Where is the compassion for the crime victims and their families?”</p><br><br>
-
-<p>Newsom’s office stated that the governor considered several factors, including “the circumstances of the crime and the sentence imposed, the applicant’s conduct while in prison and the applicant’s self-development efforts since the offense, including whether they have made use of available rehabilitative programs and addressed treatment needs.”</p><br><br>
+<a href="hogan.html"><p class="more">READ MORE: Current Maryland Governor Larry Hogan diverts from decades old "life means life policy"</p></a><br>
 
 
+<hr style="border: 1px solid white; width:50%;"><br>
 
-<p class="state">CALVIN MCNEILL</p><br>
-<p class="author">By <span>EMILY TOP</span></p>
+<h1 style="color: #D9B269; font-size: 1.5em;">About the project</h1><br>
 
-<p class="date">NOVEMBER 4, 2019</p><br><br>
-
-<p>While Maryland and Oklahoma have been slow to change their juvenile parole procedures, California governors vowed to change theirs—and largely have.
-Gov. Jerry Brown took action within months of the U.S. Supreme Court’s 2012 ban on mandatory life sentences without parole for juvenile offenders. He signed Senate Bill 9 in January 2013. That allowed those given life without parole as juveniles to request a new sentencing hearing.</p><br><br>
-
-<p>In 2016 the U.S. Supreme Court mad it clear that its 2012 decision applied retroactively. In 2017 Gov. Brown signed Senate Bill 394 which outlawed life without parole sentences. It required that juveniles serving life sentences be given a parole hearing 25 years after being convicted.</p><br><br>
-
-<p>Brown’s successor, Gov. Gavin Newsom, went further, vowing in January 2019 to “end the juvenile justice system as we know it.” He proposes moving the Division of Juvenile Justice from the California Dept. of Corrections and Rehabilitation and placing it under the supervision of the Health and Human Services Agency. “Juvenile justice should be about helping kids imagine and pursue new lives — not jumpstarting the revolving door of the criminal justice system,” Newsom said. “The system should be helping these kids unpack trauma and adverse experiences many have suffered.“</p><br><br>
-
-<p>He was denied six times for parole.</p><br><br>
-
-<div class="video-content">
-  <div class="embed-responsive embed-responsive-16by9">
-    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/M2GgIXkvFeE"></iframe>
-  </div>
-  <div class="video-caption">Video edited by DeLon Thornton | Capital News Service.</div>
-</div><br>
-
-
-<p>In March Newsom suspended executions for as long as he is in office.  In September he granted clemency to 21 violent offenders in California. Seven of those had been sentenced to life without parole. Clemency does not free them but allows these individuals to have their cases considered by a parole board. Republicans criticized Newsom saying, “Where is the compassion for the crime victims and their families?”</p><br><br>
-
-<p>Newsom’s office stated that the governor considered several factors, including “the circumstances of the crime and the sentence imposed, the applicant’s conduct while in prison and the applicant’s self-development efforts since the offense, including whether they have made use of available rehabilitative programs and addressed treatment needs.”</p><br><br>
+<p class="about">Sed ullamcorper morbi tincidunt ornare massa eget. Dignissim diam quis enim lobortis scelerisque. Morbi blandit cursus risus at.
+  <br><br> Mus mauris vitae ultricies leo integer malesuada. Eget nunc lobortis mattis aliquam faucibus purus. Mattis pellentesque id nibh tortor id aliquet lectus.
+  <br><br> Justo eget magna fermentum iaculis eu non diam. Magna fringilla urna porttitor rhoncus dolor purus non. Id neque aliquam vestibulum morbi blandit cursus.
+  <br><br>Nunc sed id semper risus in. Vitae congue eu consequat ac felis donec et odio. Ullamcorper velit sed ullamcorper morbi tincidunt ornare. Pretium quam vulputate dignissim suspendisse in.
+  <br><br>Et tortor consequat id porta nibh venenatis cras sed. Nibh mauris cursus mattis molestie a. Imperdiet dui accumsan sit amet. Arcu risus quis varius quam quisque id. Vel fringilla est ullamcorper eget.
+</p><br><br>
+<h1 style="color: #D9B269; font-size: 1.5em;">Credits</h1><br>
+<p class="final-credits"><b>Web design and development:</b> Camila Velloso<br><br>
+                   <b>Reporting and writing:</b> Camila Velloso, Hannah Gaskill, Emily Top, Athiyah Azeem, Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi and DeLon Thornton<br><br>
+                   <b>Data analysis:</b> Riin Aljas, Camila Velloso and Hannah Gaskill<br><br>
+                   <b>Video:</b> Athiyah Azeem, Hannah Gaskill Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi DeLon Thornton, Emily Top and Camila Velloso</b> <br><br>
+                   <b>Project editors:</b> Kathy Best, Tom Bettag, Marty Kaiser, Adam Marton and Sean Mussenden<br><br>
+                   <b>Audience engagement:</b> Alex Pyles<br><br>
+                   <b>Top photo:</b> Courtesy of Maryland Department of Public Safety and Correctional Services Recruitment<br><br>
+</p><br><br>
 
 
 
